--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ networks:
 
 volumes:
   static_volume:  # <-- declare the static volume
-  media_volume:  # <-- declare the media volume
+  media_volume:  # <-- declare the media volum
